@@ -5,6 +5,15 @@
 		<script src="include/main.js"></script>
 		<link rel="stylesheet" href="include/css/bootstrap.min.css" />
 		<link rel="stylesheet" href="include/css/style.css" />
+		<script>
+		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+		
+		  ga('create', 'UA-7958919-14', 'ildoc.it');
+		  ga('send', 'pageview');
+		</script>
 	</head>
 	<body onload="Game.Init()">
 		<div class="container">
@@ -22,7 +31,7 @@
 							<div id="shop"></div>
 						</div>
 					</div>
-					v. <span id="version"></span> - <a href="changelog">Changelog</a>
+					<div id="footer">v. <span id="version"></span> - <a href="changelog">Changelog</a></div>
 				</div>
 			</div>
 		</div>
